tests/positive/LocalModWithAxiom.juvix
{-# format: false #-}
module LocalModWithAxiom;                                  
       
module A;    
  
  axiom B : Type;
          
end;

module C;
  
  axiom D : Type;        

  module E;
    
    axiom F : Type;    

  end;    
             
end;
   
