tests/negative/MicroJuvix/NoPositivity/E8.juvix
module E8;
inductive B (A : Type) {
b : (A -> B (B A -> A)) -> B A;
};
end;
